# flowfinder

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT_ROADMAP.md  FLOWFINDER_EVALUATION.md  LICENSE  PRD.md  PROJECT_ASSESSMENT.md  PROJECT_STATUS_REPORT.md  README.md  REBRANDING_SUMMARY.md  SETUP_AND_TEST_INSTRUCTIONS.md  env.example  pyproject.toml  requirements.txt  run_benchmark.py  setup.py  test_benchmark_workflow.py  test_configuration_system.py  test_flowfinder_integration.py  test_integration.py  test_production_flowfinder.py  test_simple_workflow.py  test_standardized_results.py  validate_production_improvements.py
.github/workflows/: ci.yml
config/: base.yaml  basin_sampler_config.yaml  basin_sampler_minimal_config.yaml  benchmark_config.yaml  configuration_manager.py  data_sources.yaml  data_sources_minimal_test.yaml  data_sources_quick_test.yaml  data_sources_test.yaml  pipeline_config.yaml  standardized_results.py  truth_extractor_config.yaml
config/environments/: development.yaml  production.yaml  testing.yaml
config/tools/: flowfinder.yaml  grass.yaml  taudem.yaml  whitebox.yaml
docs/: PIPELINE.md  PRD.md  README.md  REVIEW_BRIEF.md  configuration_architecture.md  configuration_examples.md  configuration_implementation_plan.md  configuration_system_summary.md  data_specification.md  immediate_next_steps.md  multi_tool_benchmark_architecture.md  multi_tool_integration_strategy.md  research_brief_watershed_tools.md  strategic_analysis_assessment.md  strategic_analysis_implementation_roadmap.md  strategic_analysis_implementation_roadmap_v2.md  test_setup_guide.md  watershed_delineation_competitive_analysis.md  watershed_delineation_report.md  watershed_tools_competitive_analysis.md
docs/architecture/: configuration_architecture.md  multi_tool_benchmark_architecture.md  multi_tool_integration_strategy.md
docs/development/: CLAUDE.md  FINAL_TEST_STATUS_REPORT.md  PRD.md  PROJECT_STATUS_REPORT.md  REVIEW_BRIEF.md  claude_notes.md  configuration_implementation_plan.md  configuration_system_summary.md  immediate_next_steps.md  research_brief_watershed_tools.md  strategic_analysis_assessment.md  strategic_analysis_implementation_roadmap.md  strategic_analysis_implementation_roadmap_v2.md  watershed_delineation_competitive_analysis.md  watershed_tools_competitive_analysis.md
docs/test_coverage/: comprehensive_summary.md  crs_transformation_tests.md  general_summary.md  iou_edge_case_tests.md
docs/user_guide/: configuration_examples.md  data_specification.md  setup.md  testing.md
flowfinder/: __init__.py  __main__.py  advanced_algorithms.py  cli.py  core.py  crs_handler.py  exceptions.py  flow_accumulation.py  flow_direction.py  optimized_algorithms.py  scientific_validation.py  setup.py  test_basic.py  watershed.py
scripts/: basin_sampler.py  basin_selection.py  benchmark_runner.py  benchmark_runner_backup.py  benchmark_runner_integrated.py  create_test_data.py  download_data.py  extract_pdf.py  geometry_utils.py  test_setup.py  truth_extractor.py  validate_crs_transformations.py  validate_geometry_utils.py  validate_iou_implementation.py  validate_production_improvements.py  validation_tools.py  watershed_experiment_runner.py
scripts/backup/: benchmark_runner_backup.py  setup.py.deprecated
tests/: __init__.py  conftest.py  test_basin_sampler.py  test_benchmark_runner.py  test_crs_transformation_failures.py  test_geometry_runner.py  test_geometry_utils.py  test_iou_edge_cases.py  test_pipeline_orchestrator.py  test_truth_extractor.py  test_validation_integration.py  test_validation_tools.py
tests/integration/: test_benchmark_workflow.py  test_configuration_system.py  test_flowfinder_integration.py  test_integration.py  test_production_flowfinder.py  test_simple_workflow.py  test_standardized_results.py
